--- a/kolade/test2.html
+++ b/kolade/test2.html
@@ -12,17 +12,16 @@
         <script>
             var output= [];
            const button= document.querySelector("#btn");
-button.addEventListener('click', function(){ 
-//or button.addEventListener('click', fizzBuzz(){ 
-    fizzBuzz() 
+                button.addEventListener('click', function(){ 
+                //or button.addEventListener('click', fizzBuzz(){ 
+                    fizzBuzz() 
+                    // console.log(output);
+                    document.body.prepend(output)
 
-    console.log(output);
-    document.body.prepend(output)
-
-});
+                });
 
 function fizzBuzz(){
-    for(var count=1;count<=100;count++){
+    for(var count=1; count<=100; count++){
 
     if (count%3 ===0 & count%5 ===0) {
      output.push("fizzBuzz");
