--- a/kolade/test3.html
+++ b/kolade/test3.html
@@ -15,7 +15,7 @@
             const button= document.querySelector("#btn");
             button.addEventListener('click', DoWork);
                         
-            function DoWork(){
+            function DoWork(){ //using a named fxn to call a named fxn
                 fizzBuzz()
                 // console.log(output);
                 document.body.prepend(output)
