--- a/kolade/test2.html
+++ b/kolade/test2.html
@@ -12,7 +12,7 @@
         <script>
             var output= [];
            const button= document.querySelector("#btn");
-                button.addEventListener('click', function(){ 
+                button.addEventListener('click', function(){ //using an ananymous function() to call a named fxn-fizzbuzz
                 //or button.addEventListener('click', fizzBuzz(){ 
                     fizzBuzz() 
                     // console.log(output);
@@ -20,7 +20,8 @@
 
                 });
 
-function fizzBuzz(){
+function fizzBuzz()
+{
     for(var count=1; count<=100; count++){
 
     if (count%3 ===0 & count%5 ===0) {
