--- a/kolade/test2.html
+++ b/kolade/test2.html
@@ -1,5 +1,5 @@
 <!--this method uses button click,document.querySelector & addEventListener-->
-<!--also uses ananymous function which is called within the addEventListener-->
+<!--also uses ananymous function; function()which is called within the addEventListener-->
 <!-- also uses for loop -->
 <html>
     <head>
@@ -20,8 +20,7 @@
 
                 });
 
-function fizzBuzz()
-{
+function fizzBuzz(){
     for(var count=1; count<=100; count++){
 
     if (count%3 ===0 & count%5 ===0) {
