--- a/kolade/test3.html
+++ b/kolade/test3.html
@@ -1,5 +1,5 @@
 <!--this method uses button click,document.querySelector & addEventListener-->
-<!--also uses named function,Do work  called within the addEventListener-->
+<!--but uses named function;Do work  called within the addEventListener-->
 <!-- uses while loop -->
 
 <html>
